\name{NEWS}
\title{News for Package 'Morpho'}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}


\section{Changes in Morpho version 2.11 (2023-01-26)}{
  
  \itemize{
    
    \item crossProduct: added option normalize.
    \item Replace rgl.* calls with *3d calls. (#33)
    \item read.slicerjson: read undefined landmarks from json info instead of checking position values
    \item read.slicerjson: read orientation from file instead of generic lps2ras matrix
    \item read.slicerjson: allow to read undefined landmarks
    \item write.slicerjson: allow export of NA values for Slicer >=5.0

    }
}



\section{Changes in Morpho version 2.10 (2022-09-09)}{
  
  \itemize{
    
    \item read.fcsv: optimize handling of fiducial names
    \item NEW: computeArea: function computing projected area enclosed by set of ordered landmarks.
    \item pls2B: fixed CV and permutest for univariate cases.
    \item pls2B: Added RV-coefficient (and permutation test)
    \item getPLSCommonShape: fixed common sd calculation in example
    \item procSym/align2procSym: support use.lm option in align2procSym
    \item restoreShapes: add option meanlogCS / procSym add meanlogCS as output in case sizeshape=TRUE
    \item restoreShapes: add option origsize.
    \item restoreShapes: add option sizeshape
    \item readallTPS: add scale to allow scaling by included scale factor.
    }
}



\section{Changes in Morpho version 2.9 (2021-09-01)}{
  
  \itemize{
    
    \item deformGrid2d: added option lty
    \item read.slicerjson: add option to specify na values.
    \item rotonto: return correctly dimensioned matrices in NA cases.
    \item NEW: getPointAlongOutline and resampleCurve
    \item meshDist: added option titleplot for customizing heatmap axis.
    \item procSym: Add numbering to PC-Variance table.
    \item groupPCA: remove misleading combinedVar table from output
    \item mirror: added option to mirror on plane, using it as a wrapper for mirror2plane.