@@ -11,12 +11,12 @@
 #' @seealso \code{\link{mesh2ply}, \link{file2mesh}, \link{ply2mesh}}
 #' 
 #' @examples
-#' 
+#'
+#' \dontrun{
 #' require(rgl)
 #' data(boneData)
 #' data(nose)
 #' mergedMesh <- mergeMeshes(shortnose.mesh, skull_0144_ch_fe.mesh)
-#' \dontrun{
 #' require(rgl)
 #' shade3d(mergedMesh, col=3)
 #' }
