@@ -24,5 +24,5 @@ SEXP armaGinvCpp(SEXP matIn_, SEXP tol_) {
     forward_exception_to_r( e );
   } catch (...) {
     ::Rf_error("unknown exception");
-  }
+  } return R_NilValue; 
 }
