@@ -18,5 +18,5 @@ RcppExport SEXP barycenterCpp(SEXP vb_, SEXP it_) {
     forward_exception_to_r( e );
   } catch (...) {
     ::Rf_error("unknown exception");
-  }
+  } return R_NilValue; // -Wall
 }
