@@ -32,5 +32,5 @@ RcppExport SEXP fastSubsetMeans(SEXP x_, SEXP inds_, SEXP k_, SEXP threads_) {
     forward_exception_to_r( e );
   } catch (...) {
     ::Rf_error("unknown exception");
-  }
+  } return R_NilValue; 
 }
