@@ -27,5 +27,5 @@ RcppExport SEXP meshresCpp(SEXP vb_, SEXP it_) {
     forward_exception_to_r( e );
   } catch (...) {
     ::Rf_error("unknown exception");
-  }
+  } return R_NilValue; 
 }
