@@ -49,5 +49,5 @@ SEXP permudistArma(SEXP data_, SEXP groups_, SEXP rounds_,SEXP usemedian_) {
     forward_exception_to_r( e );
   } catch (...) {
     ::Rf_error("unknown exception");
-  }
+  } return R_NilValue; 
 }
