@@ -2,6 +2,15 @@
 \title{News for Package 'Morpho'}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
+\section{Changes in Morpho version 2.12 (2023-12-06)}{
+  
+  \itemize{
+    
+    \item Fixed compiler complaints by CRAN
+    \item bindArr: check for input as array
+
+    }
+}
 
 \section{Changes in Morpho version 2.11 (2023-01-26)}{
   
